--- a/src/main/resources/KappaModResources/localization/eng/KappaMod-Power-Strings.json
+++ b/src/main/resources/KappaModResources/localization/eng/KappaMod-Power-Strings.json
@@ -99,7 +99,7 @@
     ]
   },
   "KappaMod:ReactiveArmorPower": {
-    "NAME": "Bubble Barrier",
+    "NAME": "Reactive Armor",
     "DESCRIPTIONS": [
       "The first time you are attacked, deal #b",
       " damage back."
