--- a/src/main/resources/KappaModResources/localization/eng/KappaMod-UI-Strings.json
+++ b/src/main/resources/KappaModResources/localization/eng/KappaMod-UI-Strings.json
@@ -1,5 +1,8 @@
 {
   "KappaMod:CleansingGeyserAction": {
     "TEXT": ["Exhaust"]
+  },
+  "KappaMod:BubbleSelectionAction": {
+    "TEXT": ["Bubble"]
   }
 }
